Sun Apr  2 03:48:29 2006  Tim Janik  <timj@gtk.org>

	* sfidl-corec.cc: fixed "const" return value types.

	* testsfi.c: renamed special test assertion macro to TASSERT().

Thu Mar 30 20:46:48 2006  Tim Janik  <timj@gtk.org>

	* sfidl-clientcxx.cc: removed cruft.

Thu Mar 30 20:20:52 2006  Tim Janik  <timj@gtk.org>

	* Makefile.am: added atuomake/libtool double-compilation workaround.

	* sfimemory.[hc]: fixed bogus "const" in return type.

	* sfidl-clientcxx.cc: removed bogus code.

	* sfidl-corec.cc: namespace prefixing fixup.

Thu Mar 30 19:17:12 2006  Stefan Westerfeld  <stefan@space.twc.de>

	* sfidl-parser.cc: Fixes for gcc-4.2 snapshot related to anonymous
	namespaces.

Mon Mar 27 18:22:18 2006  Stefan Westerfeld  <stefan@space.twc.de>

	* glib-extra.[hc]: g_intern_(static)_string only needs to be provided
	for old glib versions (< glib-2.9.0).

Thu Mar  9 00:55:39 2006  Tim Janik  <timj@gtk.org>

	* Makefile.am: get rid of sficonfig.h. generate partial library libsfi.o.
	* dummy.cc: dummy file used to force C++ program linkage.

	* glib-extra.[hc]: removed GScanner clone.
	g_scanner_new64(): turned into a g_scanner_new() wrapper that ensures 64bit mode.

	* sfi/sfilog.[hc]:
	* sfi/sfithreads.[hc]: removed, functionality is provided by libbirnet now.

	* *.[hc]: use functions from the birnet_ namespace for threading and messages.

	* sficxx.cc: new file, used to hook up _sfi_init_*() functions with birnet_init().

	* sficxx.h: removed, contents are provided by sficxx.hh now.

	* sfidl-parser.cc: fixed 64bit scanner config.

	* sfitypes.c: removed old init code.

	* sfitypes.h: provide message function aliases in the sfi namespace to ease
	transition.

	* testsfi.c: fixed initialization.

Tue Mar  7 22:42:52 2006  Tim Janik  <timj@gtk.org>

	* sficxx.hh: CVS copied from sficxx.h, because this is a C++ header.

Wed Feb 15 23:18:42 2006  Tim Janik  <timj@gtk.org>

	* sfifilecrawler.c: 
	* sfilog.c: 
	* sfiprimitives.c: 
	* sfithreads.c: 