@@ -1,3 +1,7 @@
+Sat Apr  8 02:10:07 2006  Tim Janik  <timj@gtk.org>
+
+	* sfitime.[hc]: added sfi_time_to_nice_string() to allow more flexible formatting.
+
 Sun Apr  2 03:48:29 2006  Tim Janik  <timj@gtk.org>
 
 	* sfidl-corec.cc: fixed "const" return value types.
